# nodejs-server/api/openapi.yaml
@@ -13,6 +13,114 @@ info:
     url: http://dummyurl.com
   version: 1.0.0
 servers:
-- url: /
-paths: {}
-components: {}
+- url: http://dev.foo.com
+  description: Dev server
+- url: http://prod.foo.com
+  description: Prod server
+paths:
+  /employees:
+    get:
+      description: Obtain information about employees from HR database
+      operationId: employeesGET
+      parameters:
+      - name: bodyLimit
+        in: query
+        description: The amount of employees returned
+        required: false
+        style: form
+        explode: true
+        schema:
+          maximum: 20
+          minimum: 10
+          type: integer
+          example: 15
+      - name: pageLimit
+        in: query
+        description: The pages to return employee info
+        required: false
+        style: form
+        explode: true
+        schema:
+          maximum: 5
+          minimum: 1
+          type: integer
+          example: 2
+      responses:
+        "200":
+          description: Successful pull of emplyees info
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/inline_response_200'
+                x-content-type: application/json
+      x-swagger-router-controller: Default
+    post:
+      description: Creates a new employee in the database
+      operationId: employeesPOST
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/body'
+        required: true
+      responses:
+        "200":
+          description: Successfully created a new employee
+      x-swagger-router-controller: Default
+  /employees/{id}:
+    get:
+      description: Gte information about specific employee
+      operationId: employeesIdGET
+      parameters:
+      - name: id
+        in: path
+        description: The id of the employee
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+          example: 54
+      responses:
+        "200":
+          description: Success
+          content:
+            application:json:
+              schema:
+                $ref: '#/components/schemas/body'
+      x-swagger-router-controller: Default
+components:
+  schemas:
+    inline_response_200:
+      properties:
+        id:
+          type: integer
+          example: 4
+        emplyee name:
+          type: string
+          example: Tanvi Sangle
+        emplyee title:
+          type: string
+          example: Team Lead
+      example:
+        id: 4
+        emplyee name: Tanvi Sangle
+        emplyee title: Team Lead
+    body:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 4
+        emplyee name:
+          type: string
+          example: Tanvi Sangle
+        emplyee title:
+          type: string
+          example: Team Lead
+      example:
+        id: 4
+        emplyee name: Tanvi Sangle
+        emplyee title: Team Lead
